# gnc_propulsion_simulation

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: gnc.hpp  physics.hpp  propulsion.hpp
src/: gnc.cpp  physics.cpp  propulsion.cpp
tests/: CMakeLists.txt  test_gnc.cpp  test_physics.cpp  test_propulsion.cpp
